# ws-2024-agents

./: .gitignore  01_Finetuning_LayoutLM.ipynb  02_simple_arxiv_agent.ipynb  02b_sinple_arxiv_agent_colab.ipynb  03_klarna_agent.ipynb  03b_klarna_agent_colab.ipynb  04_simple_streamlit_example.py  README.md  finetuning.ipynb  mkrl.py  output.md  pyproject.toml  read.md  requirements.txt  research.db  ws-2024-agents.code-workspace
example_data/: Costs_Davy_january_2024.xlsx  Naamloos.numbers
layoutlm-funsd/checkpoint-75/: config.json  trainer_state.json
pages/: explorer.py  query copy.txt  query.py  query.txt
static/: test.html
temp/: tmpu1p5mfcfCosts_Axel_2024.xlsx
